--- a/src/main/resources/templates/empleados.HTML
+++ b/src/main/resources/templates/empleados.HTML
@@ -28,15 +28,29 @@
 	
 	
 	<div class="container">
+		
 		<div class="row">
 			<h1> Lista de empleados</h1>
 		</div>
+		<div class="row">
+			<div class="col-lg-3">
+				<a th:href="@{/empleados/nuevo}" class="btn btn-primary btn-sm mb3">Nuevo</a>
+			</div>
+		</div>
+		<br>
 		<table class="table table-striped table-bordered">
 			<thead class="table-light">
 				</tr>
 				<th>Numero</th>
 				<th>Nombre</th>
 				<th>Roll</th>
+				<th>SueldoBase</th>
+				<th>Entrega</th>
+				<th>BonoPuesto</th>
+				<th>Impuesto</th>
+				<th>ImpuestoExtra</th>
+				<th>SueldoTotal</th>
+				<th>Acciones</th>
 				
 				</tr>
 			</thead>
@@ -45,6 +59,16 @@
 					<td th:text="${empleado.id}">Numero</td>
 					<td th:text="${empleado.nombre}">Nombre</td>
 					<td th:text="${empleado.roll}">Roll</td>
+					<td th:text="${empleado.sueldoBase}">SueldoBase</td>
+					<td th:text="${empleado.entrega}">Entrega</td>
+					<td th:text="${empleado.bonoPuesto}">BonoPuesto</td>
+					<td th:text="${empleado.impuesto}">Impuesto</td>
+					<td th:text="${empleado.impuestoExtra}">ImpuestoExtra</td>
+					<td th:text="${empleado.sueldoTotal}">SueldoTotal</td>
+					<td>
+						<a th:href="@{/empleados/movimientos/{id}(id=${empleado.id})}" class="btn btn-info">Movimientos</a>
+						<a th:href="@{/empleados/{id}(id=${empleado.id})}" class="btn btn-danger">Eliminar</a>
+					</td>
 				
 				</tr>
 			</tbody>
