--- a/src/main/resources/templates/movimientos_empleado.HTML
+++ b/src/main/resources/templates/movimientos_empleado.HTML
@@ -43,6 +43,7 @@
 							<input type="text" name="nombre" th:field="*{nombre}" class="form-control"
 								placeholder="Digite su nombre" required>
 						</div>
+					
 						<div class="form-group">
 							<label>Rol :</label>
 							<input type="text" name="roll" th:field="*{roll}" class="form-control"
@@ -50,9 +51,14 @@
 						</div>
 						<div class="form-group">
 							<label>Mes :</label>
-							<input type="text" name="mes" class="form-control" placeholder="Enero" required>
+							<input type="text" name="mes" class="form-control" placeholder="Enero">
 						</div>
 						<br>
+						<div class="form-group">
+							<label>Sueldo Base :</label>
+							<input type="text" name="sueldoBase" th:field="*{sueldoBase}" class="form-control"
+								placeholder="Digite el sueldoBase" required>
+						</div>
 						<div class="form-group">
 							<label>Cantidad de entregas :</label>
 							<input type="text" name="entrega" th:field="*{entrega}" class="form-control"
