--- a/src/main/resources/templates/crear_empleado.HTML
+++ b/src/main/resources/templates/crear_empleado.HTML
@@ -45,21 +45,21 @@
 						
 
 						<div class="form-check">
-							<input class="form-check-input" type="radio" name="exampleRadios" th:field="*{roll}" id="exampleRadios1"
+							<input class="form-check-input" type="radio" name="exampleRadios" th:field="*{rol}" id="exampleRadios1"
 								value="Chofer" checked>
 							<label class="form-check-label" for="exampleRadios1">
 								Chofer
 							</label>
 						</div>
 						<div class="form-check">
-							<input class="form-check-input" type="radio" name="exampleRadios" th:field="*{roll}" id="exampleRadios2"
+							<input class="form-check-input" type="radio" name="exampleRadios" th:field="*{rol}" id="exampleRadios2"
 								value="Cargador">
 							<label class="form-check-label" for="exampleRadios2">
 								Cargador
 							</label>
 						</div>
 						<div class="form-check">
-							<input class="form-check-input" type="radio" name="exampleRadios" th:field="*{roll}" id="exampleRadios3"
+							<input class="form-check-input" type="radio" name="exampleRadios" th:field="*{rol}" id="exampleRadios3"
 								value="Auxiliar">
 							<label class="form-check-label" for="exampleRadios3">
 								Auxiliar
