--- a/src/main/resources/templates/movimientos_empleado.HTML
+++ b/src/main/resources/templates/movimientos_empleado.HTML
@@ -46,7 +46,7 @@
 					
 						<div class="form-group">
 							<label>Rol :</label>
-							<input type="text" name="roll" th:field="*{roll}" class="form-control"
+							<input type="text" name="rol" th:field="*{rol}" class="form-control"
 								placeholder="Digite su rol" required>
 						</div>
 						<div class="form-group">
@@ -54,11 +54,7 @@
 							<input type="text" name="mes" class="form-control" placeholder="Enero">
 						</div>
 						<br>
-						<div class="form-group">
-							<label>Sueldo Base :</label>
-							<input type="text" name="sueldoBase" th:field="*{sueldoBase}" class="form-control"
-								placeholder="Digite el sueldoBase" required>
-						</div>
+						
 						<div class="form-group">
 							<label>Cantidad de entregas :</label>
 							<input type="text" name="entrega" th:field="*{entrega}" class="form-control"
