--- a/src/main/resources/templates/crear_empleado.HTML
+++ b/src/main/resources/templates/crear_empleado.HTML
@@ -69,7 +69,8 @@
 						<br>
 						<div class="box-footer">
 							<button class="btn btn-success"> Guardar</button>
-
+							<a th:href="@{/empleados}" class="btn btn-secondary">Cancelar</a>
+							
 						</div>
 
 					</form>
