--- a/src/main/resources/templates/movimientos_empleado.HTML
+++ b/src/main/resources/templates/movimientos_empleado.HTML
@@ -64,6 +64,7 @@
 						<br>
 						<div class="box-footer">
 							<button class="btn btn-success"> Guardar</button>
+							<a th:href="@{/empleados}" class="btn btn-secondary">Cancelar</a>
 						</div>
 						
 
