--- a/src/main/resources/templates/crear_empleado.HTML
+++ b/src/main/resources/templates/crear_empleado.HTML
@@ -31,40 +31,23 @@
 			<div class="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
 				<h1 class="text-center">Registro de empleado</h1>
 				<div class="card-body">
-					<form th:action="@{/empleados}" th:object="${empleado}" method="POST">
-						<div class="form-group">
-							<label>Número de empleado:</label>
-							<input type="text" name="id" th:field="*{id}" class="form-control" placeholder="Mostrar Numero">
-						</div>
+				<form th:action="@{/empleados}" th:object="${empleado}" method="POST">
+						
+						
 						<div class="form-group">
 							<label>Nombre :</label>
-							<input type="text" name="nombre" th:field="*{nombre}" class="form-control"
-								placeholder="Digite su nombre" required>
-						</div>
-						<br>
+							<input type="text" class="form-control" placeholder="Digite su nombre" />
 						
-
-						<div class="form-check">
-							<input class="form-check-input" type="radio" name="exampleRadios" th:field="*{rol}" id="exampleRadios1"
-								value="Chofer" checked>
-							<label class="form-check-label" for="exampleRadios1">
-								Chofer
-							</label>
 						</div>
-						<div class="form-check">
-							<input class="form-check-input" type="radio" name="exampleRadios" th:field="*{rol}" id="exampleRadios2"
-								value="Cargador">
-							<label class="form-check-label" for="exampleRadios2">
-								Cargador
-							</label>
-						</div>
-						<div class="form-check">
-							<input class="form-check-input" type="radio" name="exampleRadios" th:field="*{rol}" id="exampleRadios3"
-								value="Auxiliar">
-							<label class="form-check-label" for="exampleRadios3">
-								Auxiliar
-							</label>
-						</div>
+						
+						<!-- <div class="form-group">
+							<label>Rol :</label>
+							 <input type="text" name="nombrerol"class="form-control"
+								placeholder="Digite su Rol" /> 
+							<input type="text" th:field="*{nombreempleado}" /> 
+							<input type="text" />
+						</div> -->
+		
 
 						<br>
 						<div class="box-footer">
