--- a/src/main/resources/templates/empleados.HTML
+++ b/src/main/resources/templates/empleados.HTML
@@ -13,22 +13,10 @@
 
 <body>
 	
-		<nav class="navbar navbar-expand-md bg-dark navbar-dark">
-			<a class="navbar-brand" href="#">Control de Empleados</a>
-			<!-- Navbar links -->
-			<div class="collapse navbar-collapse" id="collapsibleNavbar">
-				<ul class="navbar-nav">
-					<li class="nav-item"><a class="nav-link"
-					th:href="@{/empleados}">Control de empleados </a></li>
-					
-				</ul>
-			</div>
-			
-		</nav>
+	
 	
 	
 	<div class="container">
-		
 		<div class="row">
 			<h1> Lista nomina empleados por mes</h1>
 		</div>
@@ -52,15 +40,15 @@
 				<th>ImpuestoExtra</th>
 				<th>Sueldo Neto</th>
 				<th>Vales de despensa</th>
-				<th>Acciones</th>
-				
+				<th>Acciones</th> 
 				</tr>
 			</thead>
-			<tbody>
-				<tr th:each="empleado : ${empleados}">
-					<td th:text="${empleado.id}">Numero</td>
-					<td th:text="${empleado.nombre}">Nombre</td>
-					<td th:text="${empleado.rol}">Rol</td>
+			
+			<tbody>	
+				<tr data-th-each="empleado : ${empleados}">
+					<td data-th-text="${empleado.idempleado}">Numero</td>
+					<td data-th-text="${empleado.nombreempleado}">Nombre</td>
+					<!-- <td th:text="${empleado.rolempleado}">Rol</td>
 					<td th:text="${empleado.sueldoBase}">SueldoBase</td>
 					<td th:text="${empleado.entrega}">Entrega</td>
 					<td th:text="${empleado.entregaSaldo}">EntregaSaldo</td>
@@ -68,11 +56,12 @@
 					<td th:text="${empleado.impuesto}">Impuesto</td>
 					<td th:text="${empleado.impuestoExtra}">ImpuestoExtra</td>
 					<td th:text="${empleado.sueldoTotal}">Sueldo Neto</td>
-					<td th:text="${empleado.valesDespensa}">Vales de despensa</td>
+					<td th:text="${empleado.valesDespensa}">vales de deapensa</td>  
+
 					<td>
 						<a th:href="@{/empleados/movimientos/{id}(id=${empleado.id})}" class="btn btn-info">Movimientos</a>
 						<a th:href="@{/empleados/{id}(id=${empleado.id})}" class="btn btn-danger">Eliminar</a>
-					</td>
+					</td>-->
 				
 				</tr>
 			</tbody>
