--- a/src/main/resources/templates/crear_empleado.HTML
+++ b/src/main/resources/templates/crear_empleado.HTML
@@ -18,7 +18,8 @@
 		<!-- Navbar links -->
 		<div class="collapse navbar-collapse" id="collapsibleNavbar">
 			<ul class="navbar-nav">
-				<li class="nav-item"><a class="nav-link" th:href="@{/empleados}">Control de empleados </a></li>
+				<li class="nav-item"><a class="nav-link" th:href="@{/empleados}">Lista de empleados </a></li>
+				
 
 			</ul>
 		</div>
@@ -34,44 +35,58 @@
 					<form th:action="@{/empleados}" th:object="${empleado}" method="POST">
 						<div class="form-group">
 							<label>Número de empleado:</label>
-							<input type="text" name="id" th:field="*{id}" class="form-control" placeholder="Mostrar Numero">
+							<input type="text" name="id" th:field="*{id}" class="form-control"
+								placeholder="Mostrar Numero">
 						</div>
 						<div class="form-group">
 							<label>Nombre :</label>
 							<input type="text" name="nombre" th:field="*{nombre}" class="form-control"
-								placeholder="Digite su nombre" required>
+								placeholder="Digite su nombre">
 						</div>
 						<br>
-						
+						<div class="form-group">
+							<label>Nombre rol:</label>
+							<input type="text" name="nombre rol" class="form-control"
+								placeholder="Digite su nombre">
+						</div>
+						<br>
+						</div>
+						<!--<div class="form-group">
+							<label>Nombre :</label>
+							<input type="text" name="nombre" th:field="*{nombre}" class="form-control"
+								placeholder="Digite su nombre">
+						</div>-->
+					<!--	<div class="form-group">
+							<label>Rol del empleado :</label>
+							<input type="text" name="nombrerol" class="form-control">
+							<div class="col-sm-8">
+								<select th:field="*{roles}" class="from-control">
+									<th:block th:each="roles : ${roles}">
+										<option th:text="${roles.nombrerol}" th:value="${roles.idrol}"></option>
+									</th:block>
+								</select>
+							</div>
+						</div>
 
-						<div class="form-check">
-							<input class="form-check-input" type="radio" name="exampleRadios" th:field="*{rol}" id="exampleRadios1"
-								value="Chofer" checked>
-							<label class="form-check-label" for="exampleRadios1">
-								Chofer
-							</label>
-						</div>
-						<div class="form-check">
-							<input class="form-check-input" type="radio" name="exampleRadios" th:field="*{rol}" id="exampleRadios2"
-								value="Cargador">
-							<label class="form-check-label" for="exampleRadios2">
-								Cargador
-							</label>
-						</div>
-						<div class="form-check">
-							<input class="form-check-input" type="radio" name="exampleRadios" th:field="*{rol}" id="exampleRadios3"
-								value="Auxiliar">
-							<label class="form-check-label" for="exampleRadios3">
-								Auxiliar
-							</label>
-						</div>
+						<div class="col-auto">
+							<label class="visually-hidden" for="autoSizingSelect">Rol del empleado</label>
+							<select th:field="*{nombrerol}" class="form-select" id="autoSizingSelect">
+								<th:block th:each="roles : ${roles}">
+								<option th:text="${roles.nombrerol}" th:value="${roles.idrol}"></option>
+							</th:block>
+							</select>
+				
+						</div>-->
+
+
+
 
 						<br>
 						<div class="box-footer">
 							<button class="btn btn-success"> Guardar</button>
 							<a th:href="@{/empleados}" class="btn btn-secondary">Cancelar</a>
-							
 						</div>
+						<br>
 
 					</form>
 
