--- a/src/main/resources/templates/empleados.HTML
+++ b/src/main/resources/templates/empleados.HTML
@@ -12,71 +12,78 @@
 </head>
 
 <body>
-	
-		<nav class="navbar navbar-expand-md bg-dark navbar-dark">
-			<a class="navbar-brand" href="#">Control de Empleados</a>
-			<!-- Navbar links -->
-			<div class="collapse navbar-collapse" id="collapsibleNavbar">
-				<ul class="navbar-nav">
-					<li class="nav-item"><a class="nav-link"
-					th:href="@{/empleados}">Control de empleados </a></li>
-					
-				</ul>
-			</div>
-			
-		</nav>
-	
-	
+
+	<nav class="navbar navbar-expand-md bg-dark navbar-dark">
+		<a class="navbar-brand" href="#">Control de Empleados</a>
+		<!-- Navbar links -->
+		<div class="collapse navbar-collapse" id="collapsibleNavbar">
+			<ul class="navbar-nav">
+				<li class="nav-item"><a class="nav-link" th:href="@{/rol_formulario}">Control de rol </a></li>
+
+			</ul>
+		</div>
+	</nav>
+
+
 	<div class="container">
-		
+
 		<div class="row">
 			<h1> Lista nomina empleados por mes</h1>
+
+			<br>
+			<table class="table table-striped table-bordered">
+				<thead class="table-light">
+					</tr>
+					<th>Numero</th>
+					<th>Nombre</th>
+					<th>idrol</th>
+					<th>rolempleado</th>
+					<th>SueldoBase</th>
+					<th>Entrega</th>
+					<th>EntregaSaldo</th>
+					<th>Impuesto</th>
+					<th>ImpuestoExtra</th>
+					<th>Sueldo Neto</th>
+					<th>Vales de despensa</th>
+
+
+					<th>Acciones</th>
+
+
+
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="empleado : ${empleado}">
+						<td th:text="${empleado.id}"></td>
+						<td th:text="${empleado.nombre}"></td>
+						<td th:text="${empleado.roles.idrol}"></td>
+						<td th:text="${empleado.roles.nombrerol}"></td>
+						<td th:text="${empleado.sueldobase}"></td>
+						<td th:text="${empleado.entrega}"></td>
+						<td th:text="${empleado.entregasaldo}"></td>
+						<td th:text="${empleado.impuesto}"></td>
+						<td th:text="${empleado.impuestoextra}"></td>
+						<td th:text="${empleado.sueldototal}"></td>
+						<td th:text="${empleado.valesdespensa}"></td>
+
+						<td>
+							<a th:href="@{/empleados/movimientos/{id}(id=${empleado.id})}"
+								class="btn btn-info">Editar</a>
+							<a th:href="@{/empleados/eliminar/{id}(id=${empleado.id})}"
+								class="btn btn-danger">Eliminar</a>
+						</td>
+
+					</tr>
+				</tbody>
+			</table>
 		</div>
-		<div class="row">
-			<div class="col-lg-3">
-				<a th:href="@{/empleados/nuevo}" class="btn btn-primary btn-sm mb3">Nuevo</a>
-			</div>
+		<div class="d-grid gap-2 d-md-flex justify-content-md-end">
+
+			<a th:href="@{/empleados/crear_empleado}" class="btn btn-primary">Registrar nuevo
+					empleado</a>
 		</div>
-		<br>
-		<table class="table table-striped table-bordered">
-			<thead class="table-light">
-				</tr>
-				<th>Numero</th>
-				<th>Nombre</th>
-				<th>Rol</th>
-				<th>SueldoBase</th>
-				<th>Entrega</th>
-				<th>EntregaSaldo</th>
-				<th>BonoPuesto</th>
-				<th>Impuesto</th>
-				<th>ImpuestoExtra</th>
-				<th>Sueldo Neto</th>
-				<th>Vales de despensa</th>
-				<th>Acciones</th>
-				
-				</tr>
-			</thead>
-			<tbody>
-				<tr th:each="empleado : ${empleados}">
-					<td th:text="${empleado.id}">Numero</td>
-					<td th:text="${empleado.nombre}">Nombre</td>
-					<td th:text="${empleado.rol}">Rol</td>
-					<td th:text="${empleado.sueldoBase}">SueldoBase</td>
-					<td th:text="${empleado.entrega}">Entrega</td>
-					<td th:text="${empleado.entregaSaldo}">EntregaSaldo</td>
-					<td th:text="${empleado.bonoPuesto}">BonoPuesto</td>
-					<td th:text="${empleado.impuesto}">Impuesto</td>
-					<td th:text="${empleado.impuestoExtra}">ImpuestoExtra</td>
-					<td th:text="${empleado.sueldoTotal}">Sueldo Neto</td>
-					<td th:text="${empleado.valesDespensa}">Vales de despensa</td>
-					<td>
-						<a th:href="@{/empleados/movimientos/{id}(id=${empleado.id})}" class="btn btn-info">Movimientos</a>
-						<a th:href="@{/empleados/{id}(id=${empleado.id})}" class="btn btn-danger">Eliminar</a>
-					</td>
-				
-				</tr>
-			</tbody>
-		</table>
+
 	</div>
 
 </body>
