--- a/src/main/resources/templates/crear_empleado.HTML
+++ b/src/main/resources/templates/crear_empleado.HTML
@@ -32,8 +32,8 @@
 			<div class="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
 				<h1 class="text-center">Registro de empleado</h1>
 				<div class="card-body">
-<<<<<<< HEAD
-					<form th:action="@{/empleados}" th:object="${empleado}" method="POST">
+
+					<form th:action="@{/empleados/crear_empleado}" th:object="${empleado}" method="POST">
 						<div class="form-group">
 							<label>Número de empleado:</label>
 							<input type="text" name="id" th:field="*{id}" class="form-control"
@@ -44,62 +44,19 @@
 							<input type="text" name="nombre" th:field="*{nombre}" class="form-control"
 								placeholder="Digite su nombre">
 						</div>
-						<br>
-						<div class="form-group">
-							<label>Nombre rol:</label>
-							<input type="text" name="nombre rol" class="form-control"
-								placeholder="Digite su nombre">
-						</div>
-						<br>
-						</div>
 						<!--<div class="form-group">
-							<label>Nombre :</label>
-							<input type="text" name="nombre" th:field="*{nombre}" class="form-control"
-								placeholder="Digite su nombre">
-						</div>-->
-					<!--	<div class="form-group">
-							<label>Rol del empleado :</label>
-							<input type="text" name="nombrerol" class="form-control">
-							<div class="col-sm-8">
-								<select th:field="*{roles}" class="from-control">
-									<th:block th:each="roles : ${roles}">
-										<option th:text="${roles.nombrerol}" th:value="${roles.idrol}"></option>
-									</th:block>
-								</select>
-							</div>
-						</div>
-
-						<div class="col-auto">
-							<label class="visually-hidden" for="autoSizingSelect">Rol del empleado</label>
-							<select th:field="*{nombrerol}" class="form-select" id="autoSizingSelect">
-								<th:block th:each="roles : ${roles}">
-								<option th:text="${roles.nombrerol}" th:value="${roles.idrol}"></option>
-							</th:block>
-							</select>
-				
-						</div>-->
-
-
-
-=======
-				<form th:action="@{/empleados}" th:object="${empleado}" method="POST">
-						
-						
-						<div class="form-group">
-							<label>Nombre :</label>
-							<input type="text" class="form-control" placeholder="Digite su nombre" />
-						
-						</div>
-						
-						<!-- <div class="form-group">
 							<label>Rol :</label>
-							 <input type="text" name="nombrerol"class="form-control"
-								placeholder="Digite su Rol" /> 
-							<input type="text" th:field="*{nombreempleado}" /> 
-							<input type="text" />
-						</div> -->
-		
->>>>>>> 644e9e94eab1a32de58211debe1ff3ab1ef990b8
+							<input type="text" name="rol" th:field="*{rolfk.idrol}" class="form-control"
+								placeholder="Digite su rol" >
+						</div>-->
+						<div>
+							<label>Rol :</label>
+							<select th:field="*{rolfk.idrol}" class="form-control" id="dropDownList">
+								<option th:each="listaRole : ${listaRole}" 
+									th:value="${listaRole.idrol}" 
+									th:text="${listaRole.idrol}"></option>
+							</select>
+						</div>
 
 						<br>
 						<div class="box-footer">
@@ -107,7 +64,7 @@
 							<a th:href="@{/empleados}" class="btn btn-secondary">Cancelar</a>
 						</div>
 						<br>
-
+						</div>
 					</form>
 
 				</div>
