--- a/src/main/resources/templates/empleados.HTML
+++ b/src/main/resources/templates/empleados.HTML
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-<<<<<<< HEAD
+
 
 	<nav class="navbar navbar-expand-md bg-dark navbar-dark">
 		<a class="navbar-brand" href="#">Control de Empleados</a>
@@ -28,13 +28,12 @@
 
 	<div class="container">
 
-=======
-	
+
 	
 	
 	
 	<div class="container">
->>>>>>> 644e9e94eab1a32de58211debe1ff3ab1ef990b8
+
 		<div class="row">
 			<h1> Lista nomina empleados por mes</h1>
 
@@ -44,17 +43,15 @@
 					</tr>
 					<th>Numero</th>
 					<th>Nombre</th>
-					<th>idrol</th>
 					<th>rolempleado</th>
-					<th>SueldoBase</th>
+					<th>Sueldo base</th>
+					<th>Sueldo del Rol</th>
 					<th>Entrega</th>
-					<th>EntregaSaldo</th>
+					<th>Sueldo de Entrega </th>
 					<th>Impuesto</th>
-					<th>ImpuestoExtra</th>
+					<th>Impuesto Extra</th>
 					<th>Sueldo Neto</th>
 					<th>Vales de despensa</th>
-
-
 					<th>Acciones</th>
 
 
@@ -65,9 +62,9 @@
 					<tr th:each="empleado : ${empleado}">
 						<td th:text="${empleado.id}"></td>
 						<td th:text="${empleado.nombre}"></td>
-						<td th:text="${empleado.roles.idrol}"></td>
-						<td th:text="${empleado.roles.nombrerol}"></td>
+						<td th:text="${empleado.rolfk.nombrerol}"></td>
 						<td th:text="${empleado.sueldobase}"></td>
+						<td th:text="${empleado.rolfk.sueldorol}"></td>
 						<td th:text="${empleado.entrega}"></td>
 						<td th:text="${empleado.entregasaldo}"></td>
 						<td th:text="${empleado.impuesto}"></td>
@@ -76,7 +73,7 @@
 						<td th:text="${empleado.valesdespensa}"></td>
 
 						<td>
-							<a th:href="@{/empleados/movimientos/{id}(id=${empleado.id})}"
+							<a th:href="@{/empleados/movimientos_empleado/{id}(id=${empleado.id})}"
 								class="btn btn-info">Editar</a>
 							<a th:href="@{/empleados/eliminar/{id}(id=${empleado.id})}"
 								class="btn btn-danger">Eliminar</a>
@@ -90,53 +87,8 @@
 
 			<a th:href="@{/empleados/crear_empleado}" class="btn btn-primary">Registrar nuevo
 					empleado</a>
-		</div>
-<<<<<<< HEAD
-
-=======
-		<br>
-		<table class="table table-striped table-bordered">
-			<thead class="table-light">
-				</tr>
-				<th>Numero</th>
-				<th>Nombre</th>
-				<th>Rol</th>
-				<th>SueldoBase</th>
-				<th>Entrega</th>
-				<th>EntregaSaldo</th>
-				<th>BonoPuesto</th>
-				<th>Impuesto</th>
-				<th>ImpuestoExtra</th>
-				<th>Sueldo Neto</th>
-				<th>Vales de despensa</th>
-				<th>Acciones</th> 
-				</tr>
-			</thead>
-			
-			<tbody>	
-				<tr data-th-each="empleado : ${empleados}">
-					<td data-th-text="${empleado.idempleado}">Numero</td>
-					<td data-th-text="${empleado.nombreempleado}">Nombre</td>
-					<!-- <td th:text="${empleado.rolempleado}">Rol</td>
-					<td th:text="${empleado.sueldoBase}">SueldoBase</td>
-					<td th:text="${empleado.entrega}">Entrega</td>
-					<td th:text="${empleado.entregaSaldo}">EntregaSaldo</td>
-					<td th:text="${empleado.bonoPuesto}">BonoPuesto</td>
-					<td th:text="${empleado.impuesto}">Impuesto</td>
-					<td th:text="${empleado.impuestoExtra}">ImpuestoExtra</td>
-					<td th:text="${empleado.sueldoTotal}">Sueldo Neto</td>
-					<td th:text="${empleado.valesDespensa}">vales de deapensa</td>  
-
-					<td>
-						<a th:href="@{/empleados/movimientos/{id}(id=${empleado.id})}" class="btn btn-info">Movimientos</a>
-						<a th:href="@{/empleados/{id}(id=${empleado.id})}" class="btn btn-danger">Eliminar</a>
-					</td>-->
-				
-				</tr>
-			</tbody>
-		</table>
->>>>>>> 644e9e94eab1a32de58211debe1ff3ab1ef990b8
-	</div>
+</div>
+</div>
 
 </body>
 
