--- a/src/main/resources/templates/movimientos_empleado.HTML
+++ b/src/main/resources/templates/movimientos_empleado.HTML
@@ -23,39 +23,67 @@
 					<form th:action="@{/empleados/{id}(id=${empleado.id})}" th:object="${empleado}" method="POST">
 						<div class="form-group">
 							<label>Número de empleado:</label>
-							<input type="text" name="id" th:field="*{idempleado}" class="form-control"
+							<input type="text" name="id" th:field="*{id}" class="form-control"
 								placeholder="Digite su numero" required>
 						</div>
 						<br>
 						<div class="form-group">
 							<label>Nombre :</label>
-							<input type="text" name="nombre" th:field="*{nombreempleado}" class="form-control"
+							<input type="text" name="nombre" th:field="*{nombre}" class="form-control"
 								placeholder="Digite su nombre" required>
 						</div>
-					
-					<!--	<div class="form-group">
+
+						<!--<div class="form-group">
 							<label>Rol :</label>
-							<input type="text" name="rol" th:field="*{roles.idrol}" class="form-control"
-								placeholder="Digite su rol" >
+							<input type="text" name="rol" th:field="*{rolfk.idrol}" class="form-control"
+								placeholder="Digite su rol">
+						</div>-->
+												<div>
+							<label>Rol :</label>
+							<select th:field="*{rolfk.idrol}" class="form-control" id="dropDownList">
+								<option th:each="listaRole : ${listaRole}" 
+									th:value="${listaRole.idrol}" 
+									th:text="${listaRole.nombrerol}"></option>
+							</select>
 						</div>
 						<div class="form-group">
 							<label>Mes :</label>
 							<input type="text" name="mes" class="form-control" placeholder="Enero">
 						</div>
 						<br>
-						
+
 						<div class="form-group">
 							<label>Cantidad de entregas :</label>
 							<input type="text" name="entrega" th:field="*{entrega}" class="form-control"
 								placeholder="Digite la cantidad de entregas" required>
-						</div>   
+						</div>
 						
+					
+
+
+						<!--<div>
+							<select class="form-control" id="dropDownList">
+								<option value="0">select option</option>
+								<option th:each="option : ${options}" th:value="${option}" th:text="${option}"></option>
+							</select>
+						</div>-->
+						<!--<label>Rol :</label>
+							<select th:field="*{nombrerol}" class="form-control" id="dropDownList">
+								
+								<option value="2">2</option>
+								<option value="1">1</option>
+								<option th:each="lisRol : ${listaRol}" 
+									th:value="${lisRol.nombrerol}" 
+									th:text="${lisRol.nombrerol}"></option>
+							</select>
+						</div>-->
+
 						<br>
 						<div class="box-footer">
 							<button class="btn btn-success"> Guardar</button>
 							<a th:href="@{/empleados}" class="btn btn-secondary">Cancelar</a>
-						</div> -->
-						
+						</div>
+
 
 					</form>
 
