--- a/src/main/resources/templates/crear_empleado.HTML
+++ b/src/main/resources/templates/crear_empleado.HTML
@@ -54,7 +54,7 @@
 							<select th:field="*{rolfk.idrol}" class="form-control" id="dropDownList">
 								<option th:each="listaRole : ${listaRole}" 
 									th:value="${listaRole.idrol}" 
-									th:text="${listaRole.idrol}"></option>
+									th:text="${listaRole.nombrerol}"></option>
 							</select>
 						</div>
 
