--- a/src/main/resources/templates/movimientos_empleado.HTML
+++ b/src/main/resources/templates/movimientos_empleado.HTML
@@ -38,14 +38,17 @@
 							<input type="text" name="rol" th:field="*{rolfk.idrol}" class="form-control"
 								placeholder="Digite su rol">
 						</div>-->
-												<div>
+						
+						<div>
 							<label>Rol :</label>
 							<select th:field="*{rolfk.idrol}" class="form-control" id="dropDownList">
+								<option th:value="1" > 1</option>
 								<option th:each="listaRole : ${listaRole}" 
 									th:value="${listaRole.idrol}" 
 									th:text="${listaRole.nombrerol}"></option>
 							</select>
-						</div>
+						</div> 
+						
 						<div class="form-group">
 							<label>Mes :</label>
 							<input type="text" name="mes" class="form-control" placeholder="Enero">
