--- a/src/main/resources/templates/empleados.HTML
+++ b/src/main/resources/templates/empleados.HTML
@@ -41,13 +41,13 @@
 			<table class="table table-striped table-bordered">
 				<thead class="table-light">
 					</tr>
-					<th>Numero</th>
+					<th>Número</th>
 					<th>Nombre</th>
 					<th>rolempleado</th>
 					<th>Sueldo base</th>
 					<th>Sueldo del Rol</th>
-					<th>Entrega</th>
-					<th>Sueldo de Entrega </th>
+					<th>Número de Entregas</th>
+					<!--<th>Sueldo de Entrega </th>-->
 					<th>Impuesto</th>
 					<th>Impuesto Extra</th>
 					<th>Sueldo Neto</th>
@@ -66,7 +66,7 @@
 						<td th:text="${empleado.sueldobase}"></td>
 						<td th:text="${empleado.rolfk.sueldorol}"></td>
 						<td th:text="${empleado.entrega}"></td>
-						<td th:text="${empleado.entregasaldo}"></td>
+						<!--<td th:text="${empleado.entregasaldo}"></td>-->
 						<td th:text="${empleado.impuesto}"></td>
 						<td th:text="${empleado.impuestoextra}"></td>
 						<td th:text="${empleado.sueldototal}"></td>
