--- a/src/main/resources/templates/movimientosrol_rol.HTML
+++ b/src/main/resources/templates/movimientosrol_rol.HTML
@@ -28,6 +28,12 @@
 								placeholder="Digite su numero" required>
 						</div>
 						
+						<div class="form-group">
+							<label>Nombre rol:</label>
+							<input type="text" name="nombrerol" th:field="*{nombrerol}" class="form-control"
+								placeholder="Digite el nombre de rol" required>
+						</div>
+						
 						<!--	<div class="form-group">
 							<label>Nombre rol:</label>
 							<input type="text" name="nombrerol" th:field="*{nombrerol}" class="form-control"
@@ -48,15 +54,17 @@
 							<input type="text" name="sueldorol" th:field="*{sueldorol}" class="form-control"
 								placeholder="Digite el sueldo del rol" required>
 						</div>
+						
+						
 				
-						<div>
+						<!--<div>
 							<label>Rol :</label>
 							<select th:field="*{nombrerol}" class="form-control" id="dropDownList">
 								<option th:each="listaRol : ${listaRol}" 
 									th:value="${listaRol.nombrerol}" 
 									th:text="${listaRol.nombrerol}"></option>
 							</select>
-						</div>
+						</div>-->
 						<br>
 						<div class="box-footer">
 							<button class="btn btn-success"> Guardar</button>
