--- a/src/main/resources/templates/empleados.HTML
+++ b/src/main/resources/templates/empleados.HTML
@@ -24,18 +24,11 @@
 			</ul>
 		</div>
 	</nav>
-
-
-	<div class="container">
-
-
-	
-	
 	
 	<div class="container">
-
-		<div class="row">
-			<h1> Lista nomina empleados por mes</h1>
+<br>
+		<div class="row  justify-content-center " >
+			<h1 class="text-center"> Lista nomina empleados por mes</h1>
 
 			<br>
 			<table class="table table-striped table-bordered">
@@ -43,7 +36,7 @@
 					</tr>
 					<th>Número</th>
 					<th>Nombre</th>
-					<th>rolempleado</th>
+					<th>Rol de empleado</th>
 					<th>Sueldo base</th>
 					<th>Sueldo del Rol</th>
 					<th>Número de Entregas</th>
@@ -53,9 +46,6 @@
 					<th>Sueldo Neto</th>
 					<th>Vales de despensa</th>
 					<th>Acciones</th>
-
-
-
 					</tr>
 				</thead>
 				<tbody>
