--- a/src/main/resources/templates/rol_formulario.HTML
+++ b/src/main/resources/templates/rol_formulario.HTML
@@ -49,7 +49,7 @@
 					<td th:text="${roles.sueldorol}"></td>
 					
 					<td>
-						 <a th:href="@{/rol_formulario/movimientosrol/{idrol}(idrol=${roles.idrol})}" class="btn btn-info">Movimientos</a> 
+						 <a th:href="@{/rol_formulario/movimientosrol/{idrol}(idrol=${roles.idrol})}" class="btn btn-info">Editar</a> 
 						<a th:href="@{/rol_formulario/{idrol}(idrol=${roles.idrol})}" class="btn btn-danger">Eliminar</a>
 					</td>
 				
